--- a/style.css
+++ b/style.css
@@ -38,10 +38,26 @@ header {
 }
 
 #my-form label {
-  display: block;
+  display:block;
 }
 
 #my-form input[type='text'] {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+#my-form input[type='tel'] {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+#my-form input[type='email'] {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
